--- a/about.html
+++ b/about.html
@@ -105,6 +105,7 @@
                 <div class="col-lg-7">
                     <div class="mb-4">
                         <h5 class="d-inline-block text-pri text-uppercase border-bottom border-5">About Us</h5>
+                        <h1 class="display-4">Home Care Agency with the best care</h1>
                     </div>
                     <p>At AWADAD MUTUAL INC, we believe healthcare should go beyond treatment – it should bring comfort, dignity, and peace of mind. Established with a vision to redefine modern hospital and community care, we focus on delivering both medical expertise and personal support.<br><br/>
 
@@ -314,5 +315,6 @@ To empower patients and caregivers with the knowledge, care, and resources they 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
