--- a/blog.html
+++ b/blog.html
@@ -98,7 +98,7 @@
             
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card h-100 shadow-sm blog-card" data-bs-toggle="modal" data-bs-target="#newsModal1">
-                    <img src="img/herb-1.webp" class="card-img-top" alt="Blog Post 1 Image">
+                    <img src="img/blog-com.jpg" class="card-img-top" alt="Blog Post 1 Image">
                     <div class="card-body">
                         <h5 class="card-title">Community Care – Building Healthier, Stronger Communities</h5>
                         <!-- <p class="card-text text-muted">Published: October 26, 2023 | Category: Company News</p> -->
@@ -110,7 +110,7 @@
 
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card h-100 shadow-sm blog-card" data-bs-toggle="modal" data-bs-target="#newsModal2">
-                    <img src="img/blogg.png" class="card-img-top" alt="Blog Post 2 Image">
+                    <img src="img/blog-phy.jpg" class="card-img-top" alt="Blog Post 2 Image">
                     <div class="card-body">
                         <h5 class="card-title">Physiotherapy – Restoring Movement, Restoring Confidence</h5>
 <!--                         <p class="card-text text-muted">Published: November 1, 2023 | Category: Senior Care</p> -->
@@ -122,7 +122,7 @@
 
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card h-100 shadow-sm blog-card" data-bs-toggle="modal" data-bs-target="#newsModal3">
-                    <img src="img/blogg.png" class="card-img-top" alt="Blog Post 3 Image">
+                    <img src="img/blog-per.jpg" class="card-img-top" alt="Blog Post 3 Image">
                     <div class="card-body">
                         <h5 class="card-title">The Importance of Personal Care in Modern Healthcare</h5>
 <!--                         <p class="card-text text-muted">Published: October 20, 2023 | Category: Health & Wellness</p> -->
@@ -144,7 +144,7 @@
                 <div class="modal-body p-4 pt-0">
                     <h2 class="modal-title mb-3" id="newsModal1Label">Community Care – Building Healthier, Stronger Communities</h2>
                     <!-- <p class="text-muted small">Published: October 26, 2023 | Category: Company News</p> -->
-                    <img src="img/herb-1.webp" class="img-fluid mb-3" alt="Henderson Franchise Image">
+                    <img src="img/blog-com.jpg" class="img-fluid mb-3" alt="Henderson Franchise Image">
                     <p>Healthcare doesn’t stop at the hospital door—it extends to the entire community. At AWADAD MUTUAL INC, we are passionate about improving community health through outreach programs, education, and accessible services. Our goal is to bring wellness closer to people, whether at schools, workplaces, or neighborhoods.<br><br>
 
                         By engaging directly with communities, we promote preventive health, healthy lifestyles, and awareness about critical issues. We believe that when people are informed and supported, they make better choices for themselves and their families. Community care is at the heart of our mission, because stronger communities mean healthier lives for everyone.</p>
@@ -164,7 +164,7 @@
                 <div class="modal-body p-4 pt-0">
                     <h2 class="modal-title mb-3" id="newsModal2Label">Physiotherapy – Restoring Movement, Restoring Confidence</h2>
 <!--                     <p class="text-muted small">Published: November 1, 2023 | Category: Senior Care</p> -->
-                    <img src="img/blogg.png" class="img-fluid mb-3" alt="Senior Living Guide Image">
+                    <img src="img/blog-phy.jpg" class="img-fluid mb-3" alt="Senior Living Guide Image">
                     <p>Physiotherapy is not just about healing the body—it’s about restoring freedom, confidence, and independence. At AWADAD MUTUAL INC, our physiotherapy department works with patients recovering from injuries, surgeries, strokes, and chronic pain conditions. Every treatment plan is personalized, combining modern techniques with compassionate care.</p>
                     <p>For many patients, regaining mobility means more than walking again—it means returning to work, enjoying family life, and living without fear. Our expert physiotherapists use exercises, stretches, and modern rehabilitation tools to help patients move with strength and confidence. At AWADAD MUTUAL INC, we are proud to witness recovery stories that inspire hope every day.</p>
                 
@@ -182,7 +182,7 @@
                 <div class="modal-body p-4 pt-0">
                     <h2 class="modal-title mb-3" id="newsModal3Label">The Importance of Personal Care in Modern Healthcare</h2>
 <!--                     <p class="text-muted small">Published: October 20, 2023 | Category: Health & Wellness</p> -->
-                    <img src="img/blogg.png" class="img-fluid mb-3" alt="In-Home Care Image">
+                    <img src="img/blog-per.jpg" class="img-fluid mb-3" alt="In-Home Care Image">
                     <p>When people think about healthcare, they often imagine hospital visits, medications, or surgeries. But at AWADAD MUTUAL INC, we know that health is also about everyday living. Personal care—help with daily tasks such as bathing, dressing, eating, or mobility—is an essential part of keeping patients comfortable, safe, and independent.</p>
                     <p>Our trained caregivers provide not just physical support, but also emotional encouragement. Many patients and families find relief knowing that a trusted hand is there to make life easier. Personal care allows individuals to focus less on their struggles and more on enjoying life. At AWADAD MUTUAL INC, we see personal care as more than assistance—it’s dignity in action.</p>
                 </div>
@@ -264,4 +264,5 @@
 
 
 </html>
+
 
